Move Altiscale Spark examples to its own spark-example RPM