@@ -1,55 +1,44 @@
-#!/bin/sh -x
+#!/bin/sh
 
 # Run the test case as spark
 # We will use beeline to test it via the JDBC driver
 # /bin/su - spark -c "./test_spark/test_spark_thriftserver2.sh"
 
-curr_dir=`dirname $0`
-curr_dir=`cd $curr_dir; pwd`
-spark_logs=""
-spark_home=${SPARK_HOME:='/opt/spark'}
-spark_conf=""
-spark_version=$SPARK_VERSION
-spark_test_dir="$spark_home/test_spark"
-
-source $spark_home/test_spark/init_spark.sh
-
 # Default SPARK_HOME location is already checked by init_spark.sh
-if [ "x${spark_home}" = "x" ] ; then
-  spark_home=/opt/spark
-  echo "ok - applying default location $spark_home"
-elif [ ! -d "$spark_home" ] ; then
-  >&2 echo "fail - $spark_home does not exist, please check you Spark installation, exinting!"
+spark_home=${SPARK_HOME:='/opt/spark'}
+if [ ! -d "$spark_home" ] ; then
+  >&2 echo "fail - $spark_home does not exist, please check you Spark installation or SPARK_HOME env variable, exinting!"
   exit -2
 else
   echo "ok - applying Spark home $spark_home"
 fi
-if [ ! -d "$spark_test_dir/test_data" ] ; then
-  >&2 echo "fail - $spark_test_dir/test_data does not exist, this is required to create hive tables for testing, can't continue, exiting!"
-  exit -2
-fi
+
+source $spark_home/test_spark/init_spark.sh
+
 # Default SPARK_CONF_DIR is already checked by init_spark.sh
-spark_conf=$SPARK_CONF_DIR
-if [ "x${spark_conf}" = "x" ] ; then
-  spark_conf=/etc/spark
-elif [ ! -d "$spark_conf" ] ; then
-  >&2 echo "fail - $spark_conf does not exist, please check you Spark installation or your SPARK_CONF_DIR env, exiting!"
+spark_conf=${SPARK_CONF_DIR:-"/etc/spark"}
+if [ ! -d "$spark_conf" ] ; then
+  >&2 echo "fail - $spark_conf does not exist, please check you Spark installation or your SPARK_CONF_DIR env value, exiting!"
   exit -2
 else
   echo "ok - applying spark config directory $spark_conf"
 fi
-echo "ok - applying Spark conf $spark_conf"
 
 spark_version=$SPARK_VERSION
 if [ "x${spark_version}" = "x" ] ; then
-  >&2 echo "fail - spark_version can not be identified, is end SPARK_VERSION defined? Exiting!"
+  >&2 echo "fail - SPARK_VERSION can not be identified or not defined, please review SPARK_VERSION env variable? Exiting!"
   exit -2
 fi
 
+curr_dir=`dirname $0`
+curr_dir=`cd $curr_dir; pwd`
+spark_logs=""
+spark_test_dir="$spark_home/test_spark"
+
 spark_ts2_listen_port=48600
 running_user=`whoami`
-# This needs to align with /etc/spark/log4j.properties
-spark_logs=${HOME}/Hadooplogs/spark/logs/spark.log
+# This needs to align with /etc/spark/yarnclient-driver-log4j.properties
+spark_logs=${HOME}/Hadooplogs/spark/logs/spark-driver.log
 
 # Just inherit what is defined in spark-daemon.sh and load-spark-env.sh and /etc/spark/spark-env.sh
 # if [ "$SPARK_IDENT_STRING" = "" ]; then
@@ -62,16 +51,34 @@ fi
 pushd `pwd`
 cd $spark_home/sbin/
 
-sparksql_hivejars="$spark_home/sql/hive/target/spark-hive_${SPARK_SCALA_VERSION}-${spark_version}.jar"
-sparksql_hivethriftjars="$spark_home/sql/hive-thriftserver/target/spark-hive-thriftserver_${SPARK_SCALA_VERSION}-${spark_version}.jar"
-hive_jars=$sparksql_hivejars,$sparksql_hivethriftjars,$(find $HIVE_HOME/lib/ -type f -name "*.jar" | tr -s '\n' ',')
-hive_jars_colon=$sparksql_hivejars:$sparksql_hivethriftjars:$(find $HIVE_HOME/lib/ -type f -name "*.jar" | tr -s '\n' ':')
+sparksql_hivejars="$spark_home/lib/spark-hive_${SPARK_SCALA_VERSION}.jar"
+sparksql_hivethriftjars="$spark_home/lib/spark-hive-thriftserver_${SPARK_SCALA_VERSION}.jar"
 
 spark_event_log_dir=$(grep 'spark.eventLog.dir' ${spark_conf}/spark-defaults.conf | tr -s ' ' '\t' | cut -f2)
 
 echo "ok - starting thriftserver"
 
-ret=$(./start-thriftserver.sh --driver-class-path hive-site.xml:$hive_jars_colon --conf spark.yarn.dist.files=/etc/spark/hive-site.xml,$hive_jars --conf spark.executor.extraClassPath=$(basename $sparksql_hivejars):$(basename $sparksql_hivethriftjars) --hiveconf hive.server2.thrift.port=$spark_ts2_listen_port --hiveconf hive.server2.thrift.bind.host=$(hostname) --master yarn-client --executor-memory 1G --num-executors 4 --executor-cores 2 --driver-memory 1G --conf spark.locality.wait=10000 --conf spark.shuffle.manager=sort --conf spark.shuffle.consolidateFiles=true --conf spark.rdd.compress=true --conf spark.storage.memoryFraction=0.6 --conf spark.sql.inMemoryColumnarStorage.compressed=true --conf spark.sql.inMemoryColumnarStorage.batchSize=10240 --conf spark.eventLog.dir=${spark_event_log_dir}/$USER)
+ret=$(./start-thriftserver.sh --verbose \
+  --master yarn-client \
+  --driver-class-path $spark_conf/hive-site.xml:$spark_conf/yarnclient-driver-log4j.properties \
+  --jars $spark_conf/hive-site.xml,$sparksql_hivejars,$sparksql_hivethriftjars \
+  --archives hdfs:///user/$USER/apps/$(basename $(readlink -f $HIVE_HOME))-lib.zip#hive \
+  --conf spark.yarn.am.extraJavaOptions="-Djava.library.path=$HADOOP_HOME/lib/native/" \
+  --conf spark.driver.extraJavaOptions="-Dlog4j.configuration=yarnclient-driver-log4j.properties -Djava.library.path=$HADOOP_HOME/lib/native/" \
+  --conf spark.executor.extraJavaOptions="-Dlog4j.configuration=executor-log4j.properties -XX:+PrintReferenceGC -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintAdaptiveSizePolicy -Djava.library.path=$HADOOP_HOME/lib/native/" \
+  --executor-memory 1G \
+  --num-executors 4 \
+  --executor-cores 2 \
+  --driver-memory 1G \
+  --conf spark.eventLog.dir=${spark_event_log_dir}/$USER \
+  --conf spark.locality.wait=10000 \
+  --conf spark.shuffle.manager=sort \
+  --conf spark.shuffle.consolidateFiles=true \
+  --conf spark.rdd.compress=true \
+  --conf spark.sql.inMemoryColumnarStorage.compressed=true \
+  --conf spark.sql.inMemoryColumnarStorage.batchSize=10240 \
+  --hiveconf hive.server2.thrift.port=$spark_ts2_listen_port \
+  --hiveconf hive.server2.thrift.bind.host=$(hostname))
 if [ $? -ne "0" ] ; then
   >&2 echo "fail - can't start thriftserver, something went wrong, see $ret"
   exit -3
@@ -94,12 +101,13 @@ ts2_yarn_app_id=""
 log_check_ts2="true"
 pid_check_ts2="true"
 nc_check_ts2="true"
+
 # TBD: This is not a good way to check if it is up and running, however, it's a start. Can check PID, etc as well.
 start_log_line=$(grep -n "Starting SparkContext" $spark_logs | tail -n 1 | cut -d":" -f1)
 if [ "x${start_log_line}" = "x" ] ; then
-  >&2 echo "warn - log rotated so fast? can't find the starting string to search for."
+  >&2 echo "warn - log rotated so fast? can't find the starting string 'Starting SparkContext' to search for in $spark_logs"
 else
-  ts2_ret_str=$(tail -n +${start_log_line} $spark_logs | grep -i 'ThriftBinaryCLIService listening on')
+  ts2_ret_str=$(tail -n +${start_log_line} $spark_logs | grep -i 'Starting ThriftBinaryCLIService on port')
   ts2_yarn_app_id=$(tail -n +${start_log_line} $spark_logs | grep -io 'Submitted application .*' | tail -n 1 | cut -d" " -f3)
   if [ "x${ts2_ret_str}" = "x" ] ; then
     >&2 echo "fail - something is wrong, can't detect service listening string 'ThriftBinaryCLIService listening on', the service is taking longer then 60 seconds to start? This is odd on a fresh VPC, please manually check Spark TS2!"
@@ -112,6 +120,7 @@ fi
 nc_ret=$(netstat -lt | grep $spark_ts2_listen_port)
 if [ "x${nc_ret}" = "x" ] ; then
   nc_check_ts2="false"
+  >&2 echo "fail - couldn't locate network port $spark_ts2_listen_port for Spark TS2"
 fi
 
 spark_pid=$(cat $spark_ts2_pid_str | tr -d '\n')
@@ -122,6 +131,12 @@ if [ "x${pid_ret}" = "x0" ] ; then
 else
   echo "ok - Spark ThriftServer2 PID $spark_pid found"
 fi
+
+echo "ok - =========================================="
+echo "ok - you may execute \"yarn logs -applicationId ${ts2_yarn_app_id}\" to inspect executor logs"
+echo "ok - or inspect $spark_logs for spark driver logs"
+echo "ok - =========================================="
+sleep 3
 
 if [ "x${log_check_ts2}" = "false" -a "x${log_check_ts2}" = "false" -a "x${pid_check_ts2}" = "xfalse" ] ; then
   >&2 echo "fail - all pid check, log check and port check failed, Spark ThriftServer2 is not running, stopping it, and please check!"
@@ -186,15 +201,12 @@ fi
 ./stop-thriftserver.sh
 yarn_ret=$(2>/dev/null yarn application -status $ts2_yarn_app_id | grep 'State : FINISHED' | tr -d '\t' | tr -d ' ' | tr [:upper:] [:lower:] | head -n 1)
 if [ "x${yarn_ret}" = "xstate:finished" ] ; then
-  echo "ok - test completed, printing last 100 lines from YARN log for record"
-  yarn logs -applicationId $ts2_yarn_app_id | tail -n 100
+  echo "ok - test completed, printing last 100 lines from Spark TS's Driver log for record"
+  popd
+  exit 0
 else
   >&2 echo "fail - Spark TS2 YARN application did not end with State FINISHED, something is wrong, printing all logs for debugging!"
-  yarn logs -applicationId $ts2_yarn_app_id
+  >&2 echo "fail - you may execute \"yarn logs -applicationId ${ts2_yarn_app_id}\" to inspect executor logs, and $spark_logs for spark driver logs"
+  popd
+  exit -9
 fi
-
-popd
-
-exit 0
-
-
